# Weather_app

./: CMakeLists.txt  appmodel.cpp  appmodel.h  favourites.cpp  favourites.h  favourites.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  owmrequest.cpp  owmrequest.h  requestinterface.h  resources.qrc  settings.cpp  settings.h  settings.h.autosave  settings.ui  wworequest.cpp  wworequest.h
